# tiny-npu

./: .gitignore  CONTRIBUTING.md  LICENSE  MEMORY.md  Makefile  README.md  requirements-llm.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: BASELINE.md  README.md
benchmarks/prompts/: first_token_prompts.txt
benchmarks/results/: deterministic_summary.csv  test_gpt2_block.out  test_integration.out  test_mac_unit.out  test_npu_smoke.out  test_systolic_array.out
docs/: ARCHITECTURE.md  CI_BRANCH_PROTECTION.md  ROADMAP.md
python/: eval_first_token.py  eval_prompt_variation.py  run_tiny_llm_sim.py
python/golden/: reference.py
python/tests/: framework.py  test_tiny_llm_smoke.py
python/tools/: export_gpt2_weights.py  quantize_pack.py
rtl/: npu_top.sv
rtl/control/: microcode_controller.sv
rtl/engines/: gelu_engine.sv  layernorm_engine.sv  softmax_engine.sv  vec_engine.sv
rtl/gemm/: gemm_engine.sv  mac_unit.sv  systolic_array.sv
rtl/memory/: dma_engine.sv  sram_top.sv
scripts/: benchmark_deterministic.sh  check_fsm_case_coverage.sh  configure_branch_protection.sh  lint_warning_summary.sh  setup_llm_env.sh
sim/verilator/: CMakeLists.txt
sim/verilator/cmake/: generate_sram_init.cmake
sim/verilator/testbenches/: demo_infer.cpp  engine_tb.cpp  gelu_engine_tb.cpp  gpt2_block_tb.cpp  integration_tb.cpp  layernorm_engine_tb.cpp  mac_unit_tb.cpp  npu_tb.cpp  softmax_engine_tb.cpp  systolic_array_tb.cpp  vec_engine_tb.cpp
sim/verilator/testbenches/common/: npu_utils.h
